--- a/apps/web/dockerfile.dev
+++ b/apps/web/dockerfile.dev
@@ -1,43 +1,39 @@
-# ==== Builder ====
-FROM node:18-alpine as builder
+# ==== Base ====
+FROM node:18-alpine as base
 
 RUN apk add --no-cache libc6-compat
 RUN apk update
-
-WORKDIR /app
-
 RUN yarn global add turbo
+# ==== Builder ====
+FROM base as builder
+
+WORKDIR /code
 
 COPY . .
 
 RUN turbo prune --scope=@regels-overheid/web --docker
-
 # ==== Installer ====
-FROM node:18-alpine AS installer
+FROM base AS installer
 
-RUN apk add --no-cache libc6-compat
-RUN apk update
-
-WORKDIR /app
+WORKDIR /code
 
 COPY .gitignore .gitignore
-COPY --from=builder /app/out/json/ .
-COPY --from=builder /app/out/yarn.lock ./yarn.lock
+COPY --from=builder /code/out/json/ .
+COPY --from=builder /code/out/yarn.lock ./yarn.lock
 
 RUN yarn install
-
-
 # ==== Runner ====
-FROM node:18-alpine AS runner
+FROM base AS runner
 
-WORKDIR /app
+WORKDIR /code
 
 RUN addgroup --system --gid 1001 nodejs
 RUN adduser --system --uid 1001 app
 
 USER app
 
-COPY --from=builder --chown=app:nodejs /app/out/full/apps/web .
-COPY --from=installer --chown=app:nodejs /app/node_modules ./node_modules
+COPY --from=builder --chown=app:nodejs /code/out/yarn.lock ./yarn.lock
+COPY --from=builder --chown=app:nodejs /code/out/full .
+COPY --from=installer --chown=app:nodejs /code/node_modules ./node_modules
 
 CMD yarn dev
