fix: hot reload not working

--- a/apps/nginx/development.conf
+++ b/apps/nginx/development.conf
@@ -1,5 +1,13 @@
 server {
   listen 80;
+
+  location /_next/webpack-hmr {
+    proxy_pass http://web:9000/_next/webpack-hmr;
+    proxy_http_version 1.1;
+    proxy_set_header Upgrade $http_upgrade;
+    proxy_set_header Connection "upgrade"; 
+  } 
+
   location / {
     proxy_pass http://web:9000;
   }
