--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -22,9 +22,10 @@
     "@mdx-js/loader": "^2.1.5",
     "@mdx-js/react": "^1.6.22",
     "@mui/material": "^5.10.1",
+    "@next/font": "^13.0.6",
     "@next/mdx": "^13.0.6",
     "@reduxjs/toolkit": "^1.8.5",
-    "next": "12.2.5",
+    "next": "13.0.6",
     "next-redux-wrapper": "^7.0.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -34,7 +35,7 @@
   "devDependencies": {
     "@types/node": "^18.7.9",
     "eslint": "8.22.0",
-    "eslint-config-next": "12.2.5",
+    "eslint-config-next": "13.0.6",
     "openapi-typescript-codegen": "^0.23.0",
     "react-redux": "^8.0.2"
   }
