--- a/.dockerignore
+++ b/.dockerignore
@@ -1,4 +1,10 @@
-**/node_modules
 node_modules
+**/node_modules
 npm-debug.log
 out
+dist
+build
+.cache
+.docsaurus
+Dockerfile
+docker-compose.yml
