--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -6,8 +6,8 @@
     "dev": "next dev --port 9000",
     "start": "next start --port 9000",
     "build": "next build",
-    "prod": "pnpm start",
-    "fix": "pnpm fix:lint && pnpm fix:prettier",
+    "prod": "yarn start",
+    "fix": "yarn fix:lint && yarn fix:prettier",
     "fix:lint": "eslint src --fix --ext ts,tsx,js,jsx",
     "fix:prettier": "prettier \"./**/*.{js,jsx,ts,tsx,json,css,scss,md}\" --write --ignore-path ../../.prettierignore",
     "ci:tsc": "echo 'Implement ci:tsc'",
