--- a/package.json
+++ b/package.json
@@ -4,6 +4,11 @@
   "license": "EUROPEAN UNION PUBLIC LICENCE v. 1.2",
   "version": "1.0.0",
   "description": "",
+  "release": {
+    "branches": [
+      "main"
+    ]
+  },
   "workspaces": [
     "apps/*"
   ],
@@ -38,5 +43,8 @@
     "eslint": "^8.23.1",
     "turbo": "^1.4.5",
     "typescript": "^4.7.4"
+  },
+  "devDependencies": {
+    "semantic-release": "^19.0.5"
   }
 }
