chore: add ingress class name to docs

--- a/.github/configs/production/docs/values.yml
+++ b/.github/configs/production/docs/values.yml
@@ -1,5 +1,6 @@
 ingress:
   enabled: true
+  className: nginx
   annotations:
     nginx.ingress.kubernetes.io/configuration-snippet: |
       if ($request_uri ~* "^/docs/(.*)") {
