chore: fix docs hot reload in local develpoment
closes #128

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -52,6 +52,8 @@ services:
       - ./apps/docs/docs:/project/apps/docs/docs
       - ./apps/docs/static:/project/apps/docs/static
       - ./apps/docs/src:/project/apps/docs/src
+    ports:
+      - 9002:9002 # for local development / hot reloading
     build:
       context: .
       dockerfile: apps/docs/Dockerfile
