--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -25,11 +25,14 @@
     "@next/font": "^13.0.6",
     "@next/mdx": "^13.0.6",
     "@reduxjs/toolkit": "^1.8.5",
+    "@types/pg": "^8.6.6",
     "next": "13.0.6",
     "next-redux-wrapper": "^7.0.5",
+    "pg": "^8.9.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-markdown": "^8.0.3",
+    "slugify": "^1.6.5",
     "typescript": "^4.7.4"
   },
   "devDependencies": {
