--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -6,40 +6,25 @@
     "dev": "next dev --port 9000",
     "start": "next start --port 9000",
     "build": "next build",
-    "prod": "yarn start",
-    "fix": "yarn fix:lint && yarn fix:prettier",
-    "fix:lint": "eslint src --fix --ext ts,tsx,js,jsx",
-    "fix:prettier": "prettier \"./**/*.{js,jsx,ts,tsx,json,css,scss,md}\" --write --ignore-path ../../.prettierignore",
-    "ci:tsc": "echo 'Implement ci:tsc'",
-    "ci:eslint": "echo 'Implement ci:eslint'",
-    "ci:prettier": "echo 'Implement ci:prettier'",
-    "ci:test": "echo 'Implement ci:test'",
-    "codegen:cms": "openapi -i ../cms/src/extensions/documentation/documentation/1.0.0/full_documentation.json -o ./services/cms"
+    "lint": "next lint"
   },
   "dependencies": {
-    "@emotion/react": "^11.10.0",
-    "@emotion/styled": "^11.10.0",
-    "@mdx-js/loader": "^2.1.5",
-    "@mdx-js/react": "^1.6.22",
-    "@mui/material": "^5.10.1",
-    "@next/font": "^13.0.6",
-    "@next/mdx": "^13.0.6",
-    "@reduxjs/toolkit": "^1.8.5",
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
+    "@mui/material": "^5.11.8",
+    "@next/font": "^13.1.6",
+    "@types/node": "18.13.0",
     "@types/pg": "^8.6.6",
-    "next": "13.0.6",
-    "next-redux-wrapper": "^7.0.5",
+    "@types/react": "18.0.27",
+    "@types/react-dom": "18.0.10",
+    "eslint": "8.33.0",
+    "eslint-config-next": "13.1.6",
+    "next": "13.1.6",
     "pg": "^8.9.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-markdown": "^8.0.3",
+    "react-markdown": "^8.0.5",
     "slugify": "^1.6.5",
-    "typescript": "^4.7.4"
-  },
-  "devDependencies": {
-    "@types/node": "^18.7.9",
-    "eslint": "8.22.0",
-    "eslint-config-next": "13.0.6",
-    "openapi-typescript-codegen": "^0.23.0",
-    "react-redux": "^8.0.2"
+    "typescript": "4.9.5"
   }
 }
