--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -6,7 +6,9 @@
     "dev": "next dev --port 9000",
     "start": "next start --port 9000",
     "build": "next build",
-    "lint": "next lint"
+    "lint": "next lint",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build"
   },
   "dependencies": {
     "@emotion/react": "^11.10.5",
@@ -26,5 +28,16 @@
     "react-markdown": "^8.0.5",
     "slugify": "^1.6.5",
     "typescript": "4.9.5"
+  },
+  "devDependencies": {
+    "@storybook/addon-essentials": "^7.0.0-beta.45",
+    "@storybook/addon-interactions": "^7.0.0-beta.45",
+    "@storybook/addon-links": "^7.0.0-beta.45",
+    "@storybook/blocks": "^7.0.0-beta.45",
+    "@storybook/nextjs": "^7.0.0-beta.45",
+    "@storybook/react": "^7.0.0-beta.45",
+    "@storybook/testing-library": "^0.0.14-next.1",
+    "eslint-plugin-storybook": "^0.6.10",
+    "storybook": "^7.0.0-beta.45"
   }
 }
