--- a/.github/actions/testing/action.yaml
+++ b/.github/actions/testing/action.yaml
@@ -3,7 +3,7 @@ inputs:
   name:
     description: "Name of the document, will also be used as the asset label in the release"
     required: true
-  pat: 
+  token: 
     description: "GitHub access token"
     required: true
 runs:
@@ -24,7 +24,7 @@ runs:
     - name: Semantic Release
       shell: bash
       env:
-        GITHUB_TOKEN: ${{ inputs.pat }}
+        GITHUB_TOKEN: ${{ inputs.token }}
       run: |
         echo '
         {
