--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -21,7 +21,7 @@
     "@types/react-dom": "18.0.10",
     "eslint": "8.33.0",
     "eslint-config-next": "13.1.6",
-    "next": "13.1.6",
+    "next": "^13.2.1",
     "pg": "^8.9.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
