--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -15,10 +15,12 @@
     "@emotion/styled": "^11.10.5",
     "@mui/material": "^5.11.8",
     "@next/font": "^13.1.6",
+    "@total-typescript/ts-reset": "^0.3.7",
     "@types/node": "18.13.0",
     "@types/pg": "^8.6.6",
     "@types/react": "18.0.27",
     "@types/react-dom": "18.0.10",
+    "compare-versions": "^6.0.0-rc.1",
     "eslint": "8.33.0",
     "eslint-config-next": "13.1.6",
     "next": "^13.2.1",
