--- a/.github/actions/publish/action.yaml
+++ b/.github/actions/publish/action.yaml
@@ -1,6 +1,6 @@
 name: Publish Respec document to regels.overheid.nl
 inputs: 
-  name: token
+  token:
     description: "The secret publication token"
     required: true
 runs:
