--- a/.github/actions/publish/action.yaml
+++ b/.github/actions/publish/action.yaml
@@ -10,8 +10,7 @@ runs:
       id: request
       uses: fjogeleit/http-request-action@v1
       with:
-        url: 'https:/regels.overheid.nl/api/publications/publish&owner=${{ github.repository.owner.name }}&repo=${{ github.repository.name }}&secret=${{ inputs.token }}'
-        bearerToken: ${{ inputs.token }} 
+        url: 'https:/regels.overheid.nl/api/publications&owner=${{ github.repository.owner.name }}&repo=${{ github.repository.name }}&secret=${{ inputs.token }}'
     - name: Validate notify response
       env:
         response: fromJson(steps.request.outputs.response)
