--- a/.github/actions/publish/action.yaml
+++ b/.github/actions/publish/action.yaml
@@ -14,7 +14,7 @@ runs:
       id: request
       uses: fjogeleit/http-request-action@v1
       with:
-        url: 'https:/regels.overheid.nl/api/publications?owner=${{ github.event.repository.owner.name }}&repo=${{ github.event.repository.name }}&secret=${{ inputs.token }}'
+        url: 'https://regels.overheid.nl/api/publications?owner=${{ github.event.repository.owner.name }}&repo=${{ github.event.repository.name }}&secret=${{ inputs.token }}'
     - name: Validate notify response
       env:
         response: fromJson(steps.request.outputs.response)
