--- a/.github/actions/publish/action.yaml
+++ b/.github/actions/publish/action.yaml
@@ -1,25 +1,21 @@
 name: Publish Respec document to regels.overheid.nl
-inputs: 
+inputs:
   token:
     description: "The secret publication token"
     required: true
 runs:
   using: composite
-  steps: 
-    # - run: |
-    #       local_secret=$(${{ inputs.token }})
-    #       echo "::add-mask::$local_secret"
-    #   shell: bash
+  steps:
     - name: Send notify request
       id: request
       uses: fjogeleit/http-request-action@v1
       with:
-        url: 'https://regels.overheid.nl/api/publications?owner=${{ github.event.repository.owner.name }}&repo=${{ github.event.repository.name }}&secret=${{ inputs.token }}'
-    - name: Validate notify response
-      env:
-        response: fromJson(steps.request.outputs.response)
-      if: env.response.ok != true 
-      uses: actions/github-script@v3
-      with:
-        script: |
-          core.setFailed(${{ env.repsonse.message }})
+        url: "https://regels.overheid.nl/api/publications?owner=${{ github.event.repository.owner.name }}&repo=${{ github.event.repository.name }}&secret=${{ inputs.token }}"
+    # - name: Validate notify response
+    #   env:
+    #     response: fromJson(steps.request.outputs.response)
+    #   if: env.response.ok != true
+    #   uses: actions/github-script@v3
+    #   with:
+    #     script: |
+    #       core.setFailed(${{ env.repsonse.message }})
