--- a/package.json
+++ b/package.json
@@ -7,6 +7,10 @@
   "release": {
     "branches": [
       "main"
+    ],
+    "plugins": [
+      "@semantic-release/github",
+      "semantic-release-export-data"
     ]
   },
   "workspaces": {
@@ -54,6 +58,7 @@
     "typescript": "^4.7.4"
   },
   "devDependencies": {
-    "semantic-release": "^19.0.5"
+    "semantic-release": "^19.0.5",
+    "semantic-release-export-data": "^1.0.1"
   }
 }
