--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -40,6 +40,7 @@
     "@storybook/nextjs": "^7.0.0-beta.45",
     "@storybook/react": "^7.0.0-beta.45",
     "@storybook/testing-library": "^0.0.14-next.1",
+    "@types/webpack-env": "^1.18.0",
     "eslint-plugin-storybook": "^0.6.10",
     "storybook": "^7.0.0-beta.45"
   }
