--- a/.github/workflows/validate-pr.yml
+++ b/.github/workflows/validate-pr.yml
@@ -12,5 +12,5 @@ jobs:
         with:
           context: .
           target: prod
-          file: apps/web/Dockerfile
+          file: ./apps/web/Dockerfile
           push: false
