--- a/.github/workflows/validate-pr.yml
+++ b/.github/workflows/validate-pr.yml
@@ -7,6 +7,7 @@ jobs:
   deploy-preview:
     runs-on: ubuntu-20.04
     steps:
+      - uses: actions/checkout@v3
       - name: Build (Docker)
         uses: docker/build-push-action@v3
         with:
