--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -7,6 +7,8 @@
     "start": "next start --port 9000",
     "build": "next build",
     "lint": "next lint",
+    "typecheck": "tsc --noEmit -p ./tsconfig.json",
+    "stylecheck": "prettier --check .",
     "storybook": "storybook dev -p 6006",
     "build:storybook": "storybook build"
   },
