--- a/.github/actions/run-workspace-script/action.yml
+++ b/.github/actions/run-workspace-script/action.yml
@@ -1,17 +1,18 @@
-name: "Run workspace script"
+name: 'Run workspace script'
 inputs:
   workspace:
     required: true
   script:
     required: true
 runs:
-  using: "composite"
+  using: 'composite'
   steps:
     - uses: actions/checkout@v3
     - uses: actions/setup-node@v3
       with:
         cache: yarn
         node-version: 18
+    - run: yarn
+      shell: bash
     - run: yarn workspace ${{ inputs.workspace }} run ${{ inputs.script }}
       shell: bash
-
