--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -17,6 +17,7 @@
     "@emotion/styled": "^11.10.5",
     "@mui/material": "^5.11.8",
     "@next/font": "^13.1.6",
+    "@tabler/icons-react": "^2.16.0",
     "@total-typescript/ts-reset": "^0.3.7",
     "@types/node": "18.13.0",
     "@types/pg": "^8.6.6",
