--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
   "dependencies": {
     "@typescript-eslint/eslint-plugin": "^5.35.1",
     "@typescript-eslint/parser": "^5.35.1",
+    "changesets": "^1.0.2",
     "eslint": "^8.23.1",
     "turbo": "^1.4.5",
     "typescript": "^4.7.4"
