--- a/package.json
+++ b/package.json
@@ -51,9 +51,9 @@
   },
   "homepage": "https://github.com/MinBZK/regels.overheid.nl",
   "dependencies": {
+    "@changesets/cli": "^2.26.1",
     "@typescript-eslint/eslint-plugin": "^5.35.1",
     "@typescript-eslint/parser": "^5.35.1",
-    "changesets": "^1.0.2",
     "eslint": "^8.23.1",
     "turbo": "^1.4.5",
     "typescript": "^4.7.4"
