--- a/package.json
+++ b/package.json
@@ -58,7 +58,6 @@
     "typescript": "^4.7.4"
   },
   "devDependencies": {
-    "semantic-release": "^19.0.5",
-    "semantic-release-export-data": "^1.0.1"
+    "@changesets/cli": "^2.26.1"
   }
 }
