--- a/apps/cms/package.json
+++ b/apps/cms/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@regels-overheid/cms",
+  "name": "cms",
+  "version": "1.19.2",
   "private": true,
-  "version": "0.1.0",
   "description": "A Strapi application",
   "scripts": {
     "dev": "strapi develop",
