--- a/apps/docs/package.json
+++ b/apps/docs/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@regels-overheid/docs",
-  "version": "0.0.0",
+  "name": "docs",
+  "version": "1.19.2",
   "private": true,
   "scripts": {
     "start": "docusaurus serve  --port 9002 --host 0.0.0.0",
