--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -17,8 +17,10 @@
     "@emotion/styled": "^11.10.5",
     "@mui/material": "^5.11.8",
     "@next/font": "^13.1.6",
+    "@octokit/rest": "^19.0.7",
     "@tabler/icons-react": "^2.16.0",
     "@total-typescript/ts-reset": "^0.3.7",
+    "@types/compare-versions": "^3.3.0",
     "@types/node": "18.13.0",
     "@types/pg": "^8.6.6",
     "@types/react": "18.0.27",
@@ -32,7 +34,7 @@
     "react-dom": "18.2.0",
     "react-markdown": "^8.0.5",
     "rijksoverheid-fonts": "https://github.com/MinBZK/rijksoverheid-fonts",
-    "slugify": "^1.6.5",
+    "slugify": "^1.6.6",
     "typescript": "4.9.5"
   },
   "devDependencies": {
