fix: storybook ci failing because of @regels-overheid prefix

--- a/.github/workflows/storybook-deploy-preview.yml
+++ b/.github/workflows/storybook-deploy-preview.yml
@@ -27,7 +27,7 @@ jobs:
       - name: Install and Build
         run: |
           yarn install
-          yarn workspace @regels-overheid/web build:storybook
+          yarn workspace web build:storybook
       - name: Deploy preview
         uses: rossjrw/pr-preview-action@v1
         with:
