--- a/.github/workflows/semantic-release.yml
+++ b/.github/workflows/semantic-release.yml
@@ -1,11 +1,15 @@
-name: Perform semantic release
+name: Release
+
 on:
   push:
     branches:
       - main
+
+concurrency: ${{ github.workflow }}-${{ github.ref }}
+
 jobs:
-  semantic-release:
-    name: semantic-release
+  release:
+    name: Release
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
@@ -13,25 +17,10 @@ jobs:
         with:
           cache: yarn
           node-version: 18
-      - id: release
-        run: |
-          yarn
-          yarn semantic-release
+      - run: yarn
+      - uses: changesets/action@v1
+        with:
+          createGithubReleases: true
+          publish: yarn changeset publish
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-    outputs:
-      new-release-published: ${{ steps.release.outputs.new-release-published }}
-      new-release-version: ${{ steps.release.outputs.new-release-version }}
-  update-prod-version-value:
-    needs: semantic-release
-    if: needs.semantic-release.outputs.new-release-published == 'true'
-    runs-on: ubuntu-latest
-    steps:
-      - id: date
-        run: echo "::set-output name=date::$(date +'%Y-%m-%d')"
-      - uses: fjogeleit/http-request-action@main
-        with:
-          method: 'PUT'
-          bearerToken: ${{ secrets.CMS_API_TOKEN }}
-          url: 'https://regels.overheid.nl/cms/api/application-metadata'
-          data: '{ "data": { "version": "${{ needs.semantic-release.outputs.new-release-version }}", "versionUpdatedAt": "${{ steps.date.outputs.date }}" } }'
