--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -22,8 +22,8 @@
     "@types/compare-versions": "^3.3.0",
     "@types/node": "18.13.0",
     "@types/pg": "^8.6.6",
-    "@types/react": "18.0.27",
-    "@types/react-dom": "18.0.10",
+    "@types/react": "^18.2.6",
+    "@types/react-dom": "^18.2.4",
     "autoprefixer": "^10.4.14",
     "compare-versions": "^6.0.0-rc.1",
     "eslint": "8.33.0",
@@ -31,8 +31,8 @@
     "next": "^13.4.2",
     "pg": "^8.9.0",
     "postcss": "^8.4.23",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-markdown": "^8.0.5",
     "rijksoverheid-fonts": "https://github.com/MinBZK/rijksoverheid-fonts",
     "slugify": "^1.6.6",
