--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -20,24 +20,24 @@
     "@tabler/icons-react": "^2.16.0",
     "@total-typescript/ts-reset": "^0.3.7",
     "@types/compare-versions": "^3.3.0",
-    "@types/node": "18.13.0",
+    "@types/node": "20.2.0",
     "@types/pg": "^8.6.6",
-    "@types/react": "^18.2.6",
+    "@types/react": "18.2.6",
     "@types/react-dom": "^18.2.4",
     "autoprefixer": "^10.4.14",
     "compare-versions": "^6.0.0-rc.1",
-    "eslint": "8.33.0",
-    "eslint-config-next": "13.1.6",
+    "eslint": "8.40.0",
+    "eslint-config-next": "13.4.2",
     "next": "^13.4.2",
     "pg": "^8.9.0",
-    "postcss": "^8.4.23",
+    "postcss": "8.4.23",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-markdown": "^8.0.5",
     "rijksoverheid-fonts": "https://github.com/MinBZK/rijksoverheid-fonts",
     "slugify": "^1.6.6",
     "tailwindcss": "^3.3.2",
-    "typescript": "4.9.5"
+    "typescript": "5.0.4"
   },
   "devDependencies": {
     "@storybook/addon-essentials": "^7.0.0-beta.45",
