chore: install clsx, @storybook/addon-styling

--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -17,6 +17,7 @@
     "@emotion/styled": "^11.10.5",
     "@mui/material": "^5.11.8",
     "@octokit/rest": "^19.0.7",
+    "@storybook/addon-styling": "^1.0.8",
     "@tabler/icons-react": "^2.16.0",
     "@total-typescript/ts-reset": "^0.3.7",
     "@types/compare-versions": "^3.3.0",
@@ -25,6 +26,7 @@
     "@types/react": "18.2.6",
     "@types/react-dom": "^18.2.4",
     "autoprefixer": "^10.4.14",
+    "clsx": "^1.2.1",
     "compare-versions": "^6.0.0-rc.1",
     "eslint": "8.40.0",
     "eslint-config-next": "13.4.2",
