--- a/apps/web/tsconfig.json
+++ b/apps/web/tsconfig.json
@@ -25,5 +25,5 @@
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
-  "exclude": ["node_modules", "./src/stories"]
+  "exclude": ["node_modules"]
 }
