--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -19,6 +19,7 @@
     "@octokit/rest": "^19.0.7",
     "@storybook/addon-styling": "^1.0.8",
     "@tabler/icons-react": "^2.16.0",
+    "@tailwindcss/typography": "^0.5.9",
     "@total-typescript/ts-reset": "^0.3.7",
     "@types/compare-versions": "^3.3.0",
     "@types/node": "20.2.0",
