--- a/.github/workflows/deploy-web.yml
+++ b/.github/workflows/deploy-web.yml
@@ -4,11 +4,11 @@ on:
     branches:
       - main
     paths:
-      - "apps/web/**"
-      - ".github/actions/**"
-      - ".github/workflows/deploy-web.yml"
-      - "package.json"
-      - "yarn.lock"
+      - 'apps/web/**'
+      - '.github/actions/**'
+      - '.github/workflows/deploy-web.yml'
+      - 'package.json'
+      - 'yarn.lock'
 jobs:
   build-web-image:
     runs-on: ubuntu-latest
@@ -21,6 +21,7 @@ jobs:
           build-args: |
             PUBLIC_URL=https://regels.overheid.nl/web/
             NEXT_PUBLIC_CMS_ROOT_URL=https://regels.overheid.nl/cms
+            CMS_API_URL=https://regels.overheid.nl/cms/api
   deploy-web-image:
     runs-on: ubuntu-latest
     needs: build-web-image
