--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -33,6 +33,7 @@
     "postcss": "8.4.23",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "remark-gfm": "^3.0.1",
     "rijksoverheid-fonts": "https://github.com/MinBZK/rijksoverheid-fonts",
     "slugify": "^1.6.6",
     "tailwindcss": "^3.3.2",
