--- a/publiccode.yaml
+++ b/publiccode.yaml
@@ -3,6 +3,7 @@ publiccodeYmlVersion: "0.2"
 name: Open Regels
 url: "https://github.com/MinBZK/regels.overheid.git"
 softwareVersion: "dev"    # Optional
+logo: "/apps/web/src/assets/logo.png"
 releaseDate: "2023-06-30"
 platforms:
   - web
